package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_binary(
    name = "example",
    srcs = ["example.cc"],
    deps = [
        "@tensorstore//tensorstore",
        "@tensorstore//tensorstore:all_drivers",
        "@tensorstore//tensorstore:array",
        "@tensorstore//tensorstore:context",
        "@tensorstore//tensorstore:data_type",
        "@tensorstore//tensorstore:index",
        "@tensorstore//tensorstore:open",
        "@tensorstore//tensorstore:open_mode",
        "@tensorstore//tensorstore:spec",
        "@tensorstore//tensorstore/index_space:dim_expression",
        "@tensorstore//tensorstore/index_space:index_transform",
        "@tensorstore//tensorstore/util:json_absl_flag",
        "@tensorstore//tensorstore/util:span",
        "@tensorstore//tensorstore/util:status",
        "@tensorstore//tensorstore/util:str_cat",
        "@com_github_nlohmann_json//:nlohmann_json",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)